--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
-    "vue": "^3.4.37"
+    "vue": "^3.4.37",
+    "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
